# starter-file2AI-app

./: README.md  diploi.yaml
fastapi/: Dockerfile  pyproject.toml
fastapi/src/: main.py
react-vite/: index.html
react-vite/src/: App.css  types.ts  utils.ts
react-vite/src/components/: AttachedFileCard.tsx  FileDropzone.tsx  FileUploader.css  FileUploader.tsx  MediaControls.tsx  MessageList.tsx  PromptInput.tsx
react-vite/src/hooks/: useMediaRecorder.ts  useWebSocket.ts
