[project]
name = "File2AI App"
version = "0.1.0"
description = "A powerful AI-driven app that analyzes uploaded files and extracts key information. Compatible with image, video, and audio formats."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "openai>=2.15.0",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
]